@@ -615,7 +615,7 @@ does not create staffs or voices implicitly.
 
 Syntax: @code{\\skip }@var{duration}.")
 	(internal-class-name . "Music")
-	(length . ,ly:music-duration-length)
+	(length-callback . ,ly:music-duration-length)
 	(iterator-ctor . ,Simple_music_iterator::constructor)
 	(types . (general-music event rhythmic-event skip-event))
 	))
@@ -712,7 +712,7 @@ Syntax: @code{\\\\}")
 	(internal-class-name . "Repeated_music")
 	(description . "")
 	(start-moment-function .  ,Repeated_music::first_start)
-	(length . ,Repeated_music::volta_music_length)
+	(length-callback . ,Repeated_music::volta_music_length)
 	(types . (general-music repeated-music volta-repeated-music))
 	))
     
@@ -723,7 +723,7 @@ Syntax: @code{\\\\}")
 	(start-moment-function .  ,Repeated_music::first_start)
 	(internal-class-name . "Repeated_music")
 	(types . (general-music repeated-music unfolded-repeated-music))
-	(length . ,Repeated_music::unfolded_music_length)
+	(length-callback . ,Repeated_music::unfolded_music_length)
 	))
     (PercentRepeatedMusic
      . (
@@ -731,7 +731,7 @@ Syntax: @code{\\\\}")
 	(description .	"Repeats encoded by percents.")
 	(iterator-ctor . ,Percent_repeat_iterator::constructor)
 	(start-moment-function .  ,Repeated_music::first_start)
-	(length . ,Repeated_music::unfolded_music_length)
+	(length-callback . ,Repeated_music::unfolded_music_length)
 	(types . (general-music repeated-music percent-repeated-music))
 	))
     
@@ -743,7 +743,7 @@ Syntax: @code{\\\\}")
 	(start-moment-function .  ,Repeated_music::first_start)
 
 	;; the length of the repeat is handled by shifting the note logs
-	(length . ,Repeated_music::folded_music_length)
+	(length-callback . ,Repeated_music::folded_music_length)
 	(types . (general-music repeated-music tremolo-repeated-music))
 	
 	))
@@ -754,7 +754,7 @@ Syntax: @code{\\\\}")
 	(description .	"Repeats with alternatives placed in parallel. ")
 	(iterator-ctor	. ,Folded_repeat_iterator::constructor)
 	(start-moment-function .  ,Repeated_music::minimum_start)
-	(length . ,Repeated_music::folded_music_length)
+	(length-callback . ,Repeated_music::folded_music_length)
 	(types . (general-music repeated-music folded-repeated-music))
 	))
     ))
