@@ -1,3 +1,11 @@
+2005-01-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/include/lily-lexer.hh (class Lily_lexer): lose hungarian _b
+	suffix for main_input_b_.
+
+	* scm/music-functions.scm (toplevel-music-functions):
+	precompute music lengths for music expressions.  
+
 2005-01-11  Nicolas Sceaux  <nicolas.sceaux@free.fr>
 
 	* lily/include/input.hh (class Input): new `end_' slot for end of
